--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@
         <div class="row">
           <div class="col-lg-4">
             <iframe
-              src="https://portal.connectmazjid.com/widget/prayer-timing?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhc3NldFR5cGUiOiJ0aW1ldGFibGUiLCJtYXNqaWRJZCI6IjY1ZmUwNDRhOGIyMmEwYTM2ZGQxMjRiZCIsInVzZXJJZCI6IjY1NmEwZmFhNDkwNzBiNTNmYThkNzNlZSIsImlhdCI6MTcxMTIyNjc4NH0.5g3WuD-KXg8LFXKY8Y2stqO1-11bAN8LNCd0D4vuMoA
-                        "
+              src="https://portal.connectmazjid.com/widget/prayer-timing?lat=22.465084026777593&lon=88.30494547779026&token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhc3NldFR5cGUiOiJ0aW1ldGFibGUiLCJtYXNqaWRJZCI6IjY1ZmUwNDRhOGIyMmEwYTM2ZGQxMjRiZCIsInVzZXJJZCI6IjY1NmEwZmFhNDkwNzBiNTNmYThkNzNlZSIsImlhdCI6MTcxMTIyNjc4NH0.5g3WuD-KXg8LFXKY8Y2stqO1-11bAN8LNCd0D4vuMoA
+                            "
               title="Masjid Widget"
               width="380"
               height="640"
